--- a/TamamoToolkit.csproj
+++ b/TamamoToolkit.csproj
@@ -15,17 +15,17 @@
   <PropertyGroup>
     <Title>$(AssemblyName)</Title>
     <Authors>Yukari Mikaduki</Authors>
-    <Copyright>© Chaldea Security Organization. All rights reserved.</Copyright>
-    <AssemblyVersion>2.0.0.9316</AssemblyVersion>
-    <FileVersion>2.0.0.9316</FileVersion>
+    <Copyright>Copyright © 2025 Yukari Mikaduki. All rights reserved.</Copyright>
+    <AssemblyVersion>2.0.1.9319</AssemblyVersion>
+    <FileVersion>2.0.1.9319</FileVersion>
     <AssemblyInfoVersion>$(AssemblyVersion)</AssemblyInfoVersion>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Description>A collection of utilities integrated to facilitate daily development work.</Description>
     <PackageReadmeFile>README.en.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-    <PackageProjectUrl>https://github.com/YukariMikaduki/Chaldea.Components</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/YukariMikaduki/Chaldea.Components</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/YukariMikaduki/tamamo-toolkit</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/YukariMikaduki/tamamo-toolkit</RepositoryUrl>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
